src/test/deca/context/valid/classes/class_method_with_params.deca
// Description :
//    Méthode avec paramètres int et float.
//
// Resultats :
//    OK

class A {
    int add(int x, float y) {
        return x;
    }
}

{
}

