src/test/deca/context/invalid/methods/duplicate_param_name.deca
// Description :
//    Deux paramètres avec le même nom dans une méthode.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(int x, int x) {
        return x;
    }
}

{
}

